--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-}
 
+}
+apply plugin:"androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdk 30
@@ -48,7 +49,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
+    implementation "androidx.activity:activity-ktx:1.3.1"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation 'com.squareup.retrofit2:converter-scalars:2.7.1'
@@ -57,6 +58,7 @@ dependencies {
     //noinspection GradleDependency
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_vers"
     //noinspection GradleDependency
-    implementation "androidx.navigation:navigation-ui:$nav_vers"
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_vers"
+
+
 }
