--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
-
+           def nav_v="2.3.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_v"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
